--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,9 +11,9 @@ jobs:
         with:
           node-version: 16
       - name: Install dependencies
-        run: yarn install 
+        run: npm install 
       - name: Build app
-        run: yarn build 
+        run: npm run build 
       - name: Semantic release
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
